<resources>
    <string name="app_name">JJPlayer</string>
    <string name="j_j_player">J.J.PLAYER</string>
    <string name="version">Current Version></string>
    <string name="title_activity_main_window">MainWindow</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JJPlayer</string>
    <string name="nav_header_subtitle">https://t.me/Abdjavohir</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_username">Not registered</string>
    <string name="already_registered">You are already registered !</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration</string>
    <string name="no_files_found">NO FILES FOUND</string>
    <string name="documents">Documents</string>
    <string name="play_pause">Play_Pause button</string>
    <string name="previous_track">Previous track button</string>
    <string name="next_track">Next track button</string>
</resources>